appId: com.conextapp.mobile
---
- clearState
- launchApp
- waitForAnimationToEnd: {timeout: 5000}

# 1. Configuración inicial (onboarding)
- tapOn: {point: "20%,80%"}
- tapOn: {point: "40%,80%"}
- tapOn: "empezar a conectar"
- waitForAnimationToEnd: {timeout: 3000}

# 2. Credenciales de login
- tapOn: "Correo Electrónico"
- inputText: "conextapp.docs@gmail.com"
- tapOn: "Contraseña"
- inputText: "angeljulian1993"
- hideKeyboard
- waitForAnimationToEnd: {timeout: 2000}

# 3. Botón negro de login
- tapOn: {point: "50%,68%"}

# 4. Swipe de 10s para grabación de video
- swipe: {start: "50%,50%", end: "50%,50%", duration: 10000}